# template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements.txt  setup.py
notebooks/: notebook1.ipynb  sample.ipynb
src/: app.py  config.py  hello.py  main.py  utils.py
tests/: test_hello.py  test_main.py  test_utils.py
