[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
version = "0.1.0"
description = "A template python package."
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "pydantic-settings",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "ipykernel",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "utils", "config"]
